[backend/import] Atomically restore export archives
